# opencv-ocr

./: LICENSE  README.md  pyproject.toml
opencv-ocr/: __main__.py  extract.py  extract_proj.py  localize.py  preprocess.py  recognize.py
